# tg_bidlo_bot

./: .gitignore  config.py  main.py  meme_generator.py  ollama_client.py  pyproject.toml
prompts/: system_prompt.txt
